--- a/index.html
+++ b/index.html
@@ -105,7 +105,7 @@
     </section>
 
     <div id="carouselExampleCaptions" class="carousel slide" data-bs-ride="carousel">
-        <h2 style="margin-left: 500px; margin-bottom: 30px;">SPECIAL KERALA FESTIVAL TOURS</h2>
+        <h2 style="margin-bottom: 30px;">SPECIAL KERALA FESTIVAL TOURS</h2>
         <div class="carousel-indicators">
           <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
           <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="1" aria-label="Slide 2"></button>
@@ -149,7 +149,7 @@
         <div class="row">
             <div class="col-md-6">
                 
-                <iframe width="650" height="480" src="https://www.youtube.com/embed/gHESEeS1kGk" title="Celebration of Kerala&#39;s Tradition and Culture | Onam  | Kerala Tourism" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+                <iframe width="550" height="480" src="https://www.youtube.com/embed/gHESEeS1kGk" title="Celebration of Kerala&#39;s Tradition and Culture | Onam  | Kerala Tourism" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
             </div>
             <div class="col-md-6">
                 
