responsive website test v2

--- a/index.html
+++ b/index.html
@@ -113,14 +113,14 @@
         </div>
         <div class="carousel-inner">
           <div class="carousel-item active" data-bs-interval="2000">
-            <img src="https://www.kathakali.net/files/thumbs/clothing-banner_w1920_h525.jpg" class="d-block w-100" alt="...">
+            <img src="https://www.kalamandalam.ac.in/assets/img/kathakali-banner.jpg" class="d-block w-100" alt="...">
             <div class="carousel-caption d-none d-md-block">
               <h5 style="color: rgb(255, 72, 0); font-size:50px; margin-bottom: 90px;">FESTIVALS OF KERALA</h5>
               
             </div>
           </div>
           <div class="carousel-item" data-bs-interval="2000">
-            <img src="https://www.kathakali.net/files/thumbs/the-future-banner_w1920_h525.jpg" class="d-block w-100" alt="...">
+            <img src="https://www.kalamandalam.ac.in/assets/img/kathakali-banner.jpg" class="d-block w-100" alt="...">
             <div class="carousel-caption d-none d-md-block">
                 <h5 style="color: rgb(255, 72, 0); font-size:50px; margin-bottom: 90px;">FESTIVALS OF KERALA</h5>
               
